--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "zombie-slayer",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html",
     "build": "parcel build index.html"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "deasync": "^0.1.16",
     "rxjs": "^7.5.5"
